--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
     "prettier": "3.3.3",
-    "prettier-plugin-apex": "^2.0.1"
+    "prettier-plugin-apex": "2.2.6"
   },
   "lint-staged": {
     "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
